rename bookings to events for more generic naming and add an update event handler
