# cmd/bookings.go
@@ -1,203 +1,0 @@
-package main
-
-import (
-	"database/sql"
-	"errors"
-	"net/http"
-	"strings"
-	"time"
-
-	"github.com/georgifotev1/bms/internal/store"
-	"github.com/google/uuid"
-	"github.com/lib/pq"
-)
-
-const (
-	dateLayout = "2006-01-02"
-)
-
-type CreateEventPayload struct {
-	CustomerID int64     `json:"customerId" validate:"required,min=0"`
-	ServiceID  uuid.UUID `json:"serviceId" validate:"required"`
-	UserID     int64     `json:"userId" validate:"required,min=0"`
-	BrandID    int32     `json:"brandId" validate:"required,min=0"`
-	StartTime  time.Time `json:"startTime" validate:"required,gt=now"`
-	EndTime    time.Time `json:"endTime" validate:"required,gtfield=StartTime"`
-	Comment    string    `json:"comment"`
-}
-
-type EventResponse struct {
-	ID           int64     `json:"id"`
-	CustomerID   int64     `json:"customerId"`
-	ServiceID    uuid.UUID `json:"serviceId"`
-	UserID       int64     `json:"userId"`
-	BrandID      int32     `json:"brandId"`
-	StartTime    time.Time `json:"startTime"`
-	EndTime      time.Time `json:"endTime"`
-	CustomerName string    `json:"customerName"`
-	ServiceName  string    `json:"serviceName"`
-	UserName     string    `json:"userName"`
-	Comment      string    `json:"comment"`
-	CreatedAt    time.Time `json:"createdAt"`
-	UpdatedAt    time.Time `json:"updatedAt"`
-}
-
-// createEventHandler creates a new event in the system
-//
-//	@Summary		Create a new event
-//	@Description	Creates a new event with validation for timeslot availability
-//	@Tags			events
-//	@Accept			json
-//	@Produce		json
-//	@Param			payload	body		CreateEventPayload	true	"Event details"
-//	@Success		201		{object}	EventResponse		"Event created successfully"
-//	@Failure		400		{object}	error				"Bad request - invalid input"
-//	@Failure		409		{object}	error				"Conflict - timeslot already booked"
-//	@Failure		500		{object}	error				"Internal server error"
-//	@Router			/events [post]
-func (app *application) createEventHandler(w http.ResponseWriter, r *http.Request) {
-	var payload CreateEventPayload
-	if err := readJSON(w, r, &payload); err != nil {
-		app.badRequestResponse(w, r, err)
-		return
-	}
-
-	if err := Validate.Struct(payload); err != nil {
-		app.badRequestResponse(w, r, err)
-		return
-	}
-	ctx := r.Context()
-	isAvailable, err := app.store.CheckSpecificTimeslotAvailability(ctx, store.CheckSpecificTimeslotAvailabilityParams{
-		UserID:    payload.UserID,
-		ServiceID: payload.ServiceID,
-		StartTime: payload.StartTime.UTC(),
-		EndTime:   payload.EndTime.UTC(),
-	})
-	if err != nil {
-		app.internalServerError(w, r, err)
-		return
-	}
-
-	if isAvailable == false {
-		app.conflictRespone(w, r, errors.New("The requested timeslot is not available for event"))
-		return
-	}
-
-	user, err := app.getUser(ctx, payload.UserID)
-	if err != nil {
-		app.internalServerError(w, r, err)
-		return
-	}
-
-	customer, err := app.getCustomer(ctx, payload.CustomerID)
-	if err != nil {
-		app.internalServerError(w, r, err)
-		return
-	}
-
-	service, err := app.store.GetService(ctx, payload.ServiceID)
-	if err != nil {
-		app.internalServerError(w, r, err)
-		return
-	}
-
-	event, err := app.store.CreateEvent(ctx, store.CreateEventParams{
-		CustomerID: payload.CustomerID,
-		ServiceID:  payload.ServiceID,
-		UserID:     payload.UserID,
-		BrandID:    payload.BrandID,
-		StartTime:  payload.StartTime.UTC(),
-		EndTime:    payload.EndTime.UTC(),
-		Comment: sql.NullString{
-			String: payload.Comment,
-			Valid:  payload.Comment != "",
-		},
-		CustomerName: customer.Name,
-		UserName:     user.Name,
-		ServiceName:  service.Title,
-	})
-
-	if err != nil {
-		if pgError, ok := err.(*pq.Error); ok {
-			if isPgError(err, foreignKeyViolation) {
-				switch {
-				case strings.Contains(pgError.Message, "events_customer_id_fkey"):
-					app.badRequestResponse(w, r, errors.New("invalid customer"))
-				case strings.Contains(pgError.Message, "events_service_id_fkey"):
-					app.badRequestResponse(w, r, errors.New("invalid service"))
-				case strings.Contains(pgError.Message, "events_user_id_fkey"):
-					app.badRequestResponse(w, r, errors.New("invalid user"))
-				case strings.Contains(pgError.Message, "events_brand_id_fkey"):
-					app.badRequestResponse(w, r, errors.New("invalid brand"))
-				default:
-					app.badRequestResponse(w, r, errors.New("one or more referenced entities not found"))
-				}
-				return
-			}
-		}
-		app.internalServerError(w, r, err)
-		return
-	}
-
-	if err = writeJSON(w, http.StatusCreated, eventResponseMapper(event)); err != nil {
-		app.internalServerError(w, r, err)
-	}
-}
-
-// getEventsByWeekHandler List all events of a brand in a specific week
-//
-//	@Summary		List all events of a brand in a specific week
-//	@Description	List all events of a brand in a specific week and validate the user input
-//	@Tags			events
-//	@Accept			json
-//	@Produce		json
-//	@Security		ApiKeyAuth
-//	@Param			startDate	query		string			true	"Start date in YYYY-MM-DD format"	example(2025-05-19)
-//	@Param			endDate		query		string			true	"End date in YYYY-MM-DD format"		example(2025-05-20)
-//	@Param			brandId		query		integer			true	"Brand ID"							minimum(1)	example(1)
-//	@Success		200			{array}		[]EventResponse	"List of brands"
-//	@Failure		400			{object}	error			"Bad request - invalid input"
-//	@Failure		409			{object}	error			"Conflict - timeslot already booked"
-//	@Failure		500			{object}	error			"Internal server error"
-//	@Router			/events/week [get]
-func (app *application) getEventsByTimeStampHandler(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-	ctxUser := ctx.Value(userCtx).(*store.User)
-	startDate := r.URL.Query().Get("startDate")
-	endDate := r.URL.Query().Get("endDate")
-
-	startDateTime, err := time.Parse(dateLayout, startDate)
-	if err != nil {
-		app.badRequestResponse(w, r, errors.New("Invalid startDate format. Must be YYYY-MM-DD"))
-		return
-	}
-
-	endDateTime, err := time.Parse(dateLayout, endDate)
-	if err != nil {
-		app.badRequestResponse(w, r, errors.New("Invalid endDate format. Must be YYYY-MM-DD"))
-		return
-	}
-
-	events, err := app.store.GetEventsByWeek(r.Context(), store.GetEventsByWeekParams{
-		StartDate: startDateTime,
-		EndDate:   endDateTime,
-		BrandID:   ctxUser.BrandID.Int32,
-	})
-	if err != nil {
-		app.internalServerError(w, r, err)
-		return
-	}
-
-	var result []EventResponse
-	for _, v := range events {
-		result = append(result, eventResponseMapper(v))
-	}
-
-	if len(result) == 0 {
-		result = []EventResponse{}
-	}
-
-	if err = writeJSON(w, http.StatusOK, result); err != nil {
-		app.internalServerError(w, r, err)
-	}
-}
